# FGA-Template

./: .gitignore  pyproject.toml  readme.md
src/: border_handler.py  calculation.py  create.py  detect_text.py  directory_handler.py  draw.py  gui.py  gui_components.py  gui_handler_create.py  gui_handler_detect_text.py  gui_handler_match.py  gui_handler_match_score.py  gui_handler_reverse.py  gui_handler_text.py  image_handler.py  information_handler.py  main.py  match.py  reverse.py
